--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Myshop</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+    <head>
+        <title>Something in my shop</title>
+        <%= stylesheet_link_tag "scaffold" %>
+        <%= stylesheet_link_tag "depot", :media => "all" %>
+        <%= javascript_include_tag :defaults %>
+        <%= csrf_meta_tag %>
+    </head>
+    <body id="store" >
+        <div id="banner">
+            <%= image_tag("logo.jpg", :alt=> @page_title || "My Super Shop") %>
+        </div>
+        <div id="columns">
+            <nav id="side">
+                <a href="http://www....">Home</a>
+                <a href="http://www..../faq">Questions</a>
+                <a href="http://www..../news">News</a>
+                <a href="http://www..../contact">Contact</a>
+            </nav>
+            <div id="main">
+                <%= yield %>
+            </div>
+        </div>
+    </body>
 </html>
